<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="bottom_nav">
    <group>
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:checkable="true"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:checkable="true"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>


        <item android:title="@string/just_for_design">
            <menu>
                    <item
                        android:id="@+id/nav_info"
                        android:checkable="true"
                        android:icon="@drawable/info_24"
                        android:title="@string/info" />
                    <item
                        android:id="@+id/nav_share"
                        android:checkable="true"
                        android:icon="@drawable/share_24"
                        android:title="@string/share" />
                    <item
                        android:id="@+id/nav_logout"
                        android:checkable="true"
                        android:icon="@drawable/logout_24"
                        android:title="@string/logout" />
            </menu>


        </item>


</menu>